Identify next task

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -88,6 +88,7 @@
         <div class="drop drop4a"></div>
         <div class="drop drop4b"></div>
       </div>
+      <%# 2/28 work on adding flower and animations %>
    </div>
   </body>
 </html>
